--- a/experiments/exp_bank_loan.ipynb
+++ b/experiments/exp_bank_loan.ipynb
@@ -115,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2. 0. 0. 0. 5. 3. 3. 1. 1. 2. 0. 0. 0. 0. 0.]\n"
+      "[ 0.  1.  2.  0. 10.  3. 15.  0.  0.  3.  0.  0.  0.  0.  0.]\n"
      ]
     }
    ],
@@ -133,8 +133,8 @@
      "output_type": "stream",
      "text": [
       "[0 1]\n",
-      "Train 0.8913643641985534\n",
-      "Test 0.6908127208480566\n"
+      "Train 0.9844210679576312\n",
+      "Test 0.7813682678311499\n"
      ]
     }
    ],
@@ -155,10 +155,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['312246.00 < Current Loan Amount <= 524942.00', 'Long Term', 'Credit Score <= nan', 'Annual Income <= nan', '5 years', 'Rent', 'Debt Consolidation', '10214.16 < Monthly Debt <= 16220.30', '13.50 < Years of Credit History <= 16.90', '10.00 < Number of Open Accounts <= 14.00', 'Number of Credit Problems <= 0.00', 'Current Credit Balance <= 112670.00', 'Maximum Open Credit <= nan', 'Bankruptcies <= nan', 'Tax Liens <= nan']\n",
-      "(36222, 15)\n",
-      "[2. 0. 0. 0. 5. 3. 3. 1. 1. 2. 0. 0. 0. 0. 0.]\n",
-      "[[2. 0. 0. 0. 5. 3. 3. 1. 1. 2. 0. 0. 0. 0. 0.]]\n"
+      "['Current Loan Amount <= 186648.00', 'Short Term', '724.00 < Credit Score <= 741.00', 'Annual Income <= 849110.00', '< 1 year', 'Rent', 'wedding', 'Monthly Debt <= 10260.19', 'Years of Credit History <= 13.50', 'Number of Open Accounts > 14.00', 'Number of Credit Problems <= 0.00', 'Current Credit Balance <= 112746.00', 'Maximum Open Credit <= 271986.00', 'Bankruptcies <= 0.00', 'Tax Liens <= 0.00']\n",
+      "(27473, 15)\n",
+      "[ 0.  1.  2.  0. 10.  3. 15.  0.  0.  3.  0.  0.  0.  0.  0.]\n",
+      "[[ 0.  1.  2.  0. 10.  3. 15.  0.  0.  3.  0.  0.  0.  0.  0.]]\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 75\n",
+    "nb_vals = 100\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -183,14 +183,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n"
+      "['Current Loan Amount', 'Term', 'Credit Score', 'Annual Income', 'Years in current job', 'Home Ownership', 'Purpose', 'Monthly Debt', 'Years of Credit History', 'Number of Open Accounts', 'Number of Credit Problems', 'Current Credit Balance', 'Maximum Open Credit', 'Bankruptcies', 'Tax Liens']\n",
+      "Generating arguments\n",
+      "1500  potential arg checked.\n",
+      "len  1 : 4 ,  4\n",
+      "10500  potential arg checked.\n",
+      "len  2 : 171 ,  152\n",
+      "45500  potential arg checked.\n",
+      "len  3 : 1217 ,  1315\n",
+      "136500  potential arg checked.\n",
+      "len  4 : 885 ,  845\n",
+      "300300  potential arg checked.\n",
+      "len  5 : 56 ,  161\n",
+      "500500  potential arg checked.\n",
+      "len  6 : 2 ,  4\n",
+      "643500  potential arg checked.\n",
+      "len  7 : 0 ,  0\n",
+      "Saving to  ../saves\\bankloan_100_minimals.df\n"
      ]
     }
    ],
@@ -204,28 +220,28 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'bankloan_' + str(nb_vals), compute=True, output_path='../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "590 591  args total\n",
-      "bankloan_75\n",
-      "len(R_atk) =  264937\n",
-      "5 highest degrees: [(frozenset({40, 3}), 568) (frozenset({32, 2}), 569)\n",
-      " (frozenset({40, 42}), 570) (frozenset({32, 42}), 572)\n",
-      " (frozenset({32, 28}), 577)]\n",
-      "5 lowest degrees: [(frozenset({1, 35, 29}), 326) (frozenset({1, 35, 43}), 329)\n",
-      " (frozenset({1, 5, 43, 29}), 341) (frozenset({1, 36, 29, 22}), 343)\n",
-      " (frozenset({2, 45, 30}), 343)]\n",
-      "edges per node: 448.66553767993224\n"
+      "2335 2481  args total\n",
+      "bankloan_100\n",
+      "len(R_atk) =  4822396\n",
+      "5 highest degrees: [(frozenset({35}), 2403) (frozenset({30}), 2403)\n",
+      " (frozenset({32, 61}), 2417) (frozenset({51, 36}), 2428)\n",
+      " (frozenset({63}), 2469)]\n",
+      "5 lowest degrees: [(frozenset({3, 28, 55}), 1532) (frozenset({3, 13, 38}), 1535)\n",
+      " (frozenset({2, 10, 52}), 1541) (frozenset({2, 10, 54}), 1545)\n",
+      " (frozenset({1, 10, 41}), 1551)]\n",
+      "edges per node: 2002.656146179402\n"
      ]
     }
    ],
@@ -239,22 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using pre-processed file...\n",
-      "Reading asp_test_preprocessed.txt\n",
-      "Time for selection:  411.7170205116272\n"
+      "Pre-processing file...\n",
+      "Done\n",
+      "Reading ../saves/bankloan_100_sat_preprocessed.txt\n"
      ]
     }
    ],
    "source": [
-    "ext_gen = explainer.extension_generator(file='asp_test.txt')\n",
-    "max_covi_ext = explainer.make_selection(ext_gen, 'max_covi')"
+    "#ext_gen = explainer.extension_generator_from_graph()\n",
+    "ext_gen = explainer.extension_generator_from_sat(file='../saves/bankloan_100_sat.txt')\n",
+    "max_covi_ext = explainer.make_selection('max_covi', ext_gen)"
    ]
   },
   {
@@ -273,8 +290,27 @@
    "source": [
     "#sel = explainer.make_selection(max_covi_ext, 'max_covc')\n",
     "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
+    "#print(res)\n",
     "\n",
-    "print(res)\n"
+    "explainer.display_explanations()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_one = explainer.apply_inference(max_covi_ext, 'one')\n",
+    "print(len(res_one))\n",
+    "explainer.display_explanations()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Brouillon"
    ]
   },
   {
@@ -793,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
