--- a/experiments/exp_diabetes.ipynb
+++ b/experiments/exp_diabetes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,62 +11,64 @@
     "import pandas as pd\n",
     "import sklearn.ensemble\n",
     "import numpy as np\n",
-    "from anchor import anchor_tabular"
+    "from anchor import anchor_tabular\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 3.  6. 15.  2. 12.  0.  4.  1.  2.  0.  1. 39.]\n"
+      "[1. 0. 3. 0. 0. 3. 0. 0. 1.]\n"
      ]
     }
    ],
    "source": [
-    "dataset_folder = '../datasets/'\n",
-    "dataset = utils.load_dataset('adult', balance=True, dataset_folder=dataset_folder, discretize=True)\n",
+    "dataset_folder = '../../datasets/'\n",
+    "dataset = utils.load_dataset('diabetes', balance=True, dataset_folder=dataset_folder, discretize=True)\n",
     "print(dataset.train[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train 0.9350338780390594\n",
-      "Test 0.8489483747609943\n"
+      "Train 0.9124586549062844\n",
+      "Test 0.828042328042328\n"
      ]
     }
    ],
    "source": [
     "c = sklearn.ensemble.RandomForestClassifier(n_estimators=50, n_jobs=5)\n",
     "c.fit(dataset.train, dataset.labels_train)\n",
+    "#print(np.unique(dataset.labels_train))\n",
     "print('Train', sklearn.metrics.accuracy_score(dataset.labels_train, c.predict(dataset.train)))\n",
     "print('Test', sklearn.metrics.accuracy_score(dataset.labels_test, c.predict(dataset.test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Age > 48.00', 'Self-emp-not-inc', 'Some-college', 'Married-civ-spouse', 'Sales', 'Husband', 'White', 'Male', '2', '0', '40.00 < Hours per week <= 45.00', 'United-States']\n",
-      "(12545, 12)\n",
-      "[ 3.  6. 15.  2. 12.  0.  4.  1.  2.  0.  1. 39.]\n",
-      "[[ 3.  6. 15.  2. 12.  0.  4.  1.  2.  0.  1. 39.]]\n"
+      "['5400.00 < loan_amnt <= 10000.00', 'MORTGAGE', 'annual_inc > 82000.00', 'desc <= 4.00', 'inq_last_6mths <= 0.00', 'revol_util > 72.22', 'last_fico_range_high <= 649.00', 'last_fico_range_low <= 645.00', '0']\n",
+      "(9070, 9)\n",
+      "[1. 0. 3. 0. 0. 3. 0. 0. 1.]\n",
+      "[[1. 0. 3. 0. 0. 3. 0. 0. 1.]]\n"
      ]
     }
    ],
@@ -80,7 +82,7 @@
     "\n",
     "train_data = pd.DataFrame(transformed_data, columns=dataset.feature_names)\n",
     "print(train_data.shape)\n",
-    "nb_vals = 75\n",
+    "nb_vals = 100\n",
     "\n",
     "print(dataset.train[0])\n",
     "print(dataset.train[0].reshape(1, -1))\n",
@@ -91,35 +93,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import arg_explainer as ae\n",
-    "from importlib import reload\n",
-    "reload(ae)\n",
-    "import arg_explainer as ae\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adult_' + str(nb_vals), compute=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "213 212  args total\n",
-      "adult_75\n",
-      "len(R_atk) =  36404\n",
-      "5 highest degrees: [(frozenset({25, 47}), 209) (frozenset({52}), 209) (frozenset({53}), 209)\n",
-      " (frozenset({56}), 213) (frozenset({55}), 213)]\n",
-      "5 lowest degrees: [(frozenset({2, 36, 6}), 119) (frozenset({3, 28, 5}), 122)\n",
-      " (frozenset({2, 28}), 124) (frozenset({2, 36, 58}), 124)\n",
-      " (frozenset({3, 36, 7}), 125)]\n",
-      "edges per node: 171.3129411764706\n"
+      "['loan_amnt', 'home_ownership', 'annual_inc', 'desc', 'inq_last_6mths', 'revol_util', 'last_fico_range_high', 'last_fico_range_low', 'pub_rec_bankruptcies']\n",
+      "Generating arguments\n",
+      "900  potential arg checked.\n",
+      "len  1 : 2 ,  1\n",
+      "3600  potential arg checked.\n",
+      "len  2 : 49 ,  61\n",
+      "8400  potential arg checked.\n",
+      "len  3 : 159 ,  197\n",
+      "12600  potential arg checked.\n",
+      "len  4 : 59 ,  18\n",
+      "12600  potential arg checked.\n",
+      "len  5 : 7 ,  0\n",
+      "8400  potential arg checked.\n",
+      "len  6 : 0 ,  0\n",
+      "Saving to  ../saves\\lending_100_minimals.df\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.append(sys.path[0] + '/..')\n",
+    "\n",
+    "import arg_explainer as ae\n",
+    "from importlib import reload\n",
+    "reload(ae)\n",
+    "import arg_explainer as ae\n",
+    "\n",
+    "print(dataset.feature_names)\n",
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'lending_' + str(nb_vals), compute=True, output_path='../saves')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "276 277  args total\n",
+      "lending_100\n",
+      "len(R_atk) =  55972\n",
+      "5 highest degrees: [(frozenset({13, 22}), 262) (frozenset({26, 31, 15}), 267)\n",
+      " (frozenset({32, 25}), 267) (frozenset({32, 22}), 267)\n",
+      " (frozenset({30}), 269)]\n",
+      "5 lowest degrees: [(frozenset({1, 19, 12}), 124) (frozenset({1, 21, 14}), 127)\n",
+      " (frozenset({3, 21, 6, 14}), 128) (frozenset({2, 18, 13}), 131)\n",
+      " (frozenset({1, 18, 11}), 132)]\n",
+      "edges per node: 202.43037974683546\n"
      ]
     }
    ],
@@ -127,250 +157,99 @@
     "G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "def graph_to_tgf(G):\n",
-    "    tgf_file = 'tgf_test.tgf'\n",
-    "    node_dict = {}\n",
-    "    i_ = 0\n",
-    "    with open(tgf_file, 'w') as f:\n",
-    "        for n in G.nodes():\n",
-    "            i_ += 1\n",
-    "            node_dict[n] = i_\n",
-    "            f.write(str(i_)+ '\\n')\n",
-    "        f.write('#\\n')\n",
-    "        for u, v in G.edges():\n",
-    "            f.write(str(node_dict[u]) + ' ' + str(node_dict[v]) + '\\n')\n",
-    "            f.write(str(node_dict[v]) + ' ' + str(node_dict[u]) + '\\n')\n",
-    "\n",
-    "    return node_dict\n",
-    "    \n",
-    "def graph_to_asp(G):\n",
-    "    asp_file = 'asp_test.asp'\n",
-    "    node_dict = {}\n",
-    "    i_ = 0\n",
-    "    with open(asp_file, 'w') as f:\n",
-    "        for n in G.nodes():\n",
-    "            i_ += 1\n",
-    "            node_dict[n] = i_\n",
-    "            f.write(\"arg(\" + str(i_) + \").\\n\")\n",
-    "        for u, v in G.edges():\n",
-    "            f.write(\"att(\" + str(node_dict[u]) + ',' + str(node_dict[v]) + ').\\n')\n",
-    "            f.write(\"att(\" + str(node_dict[v]) + ',' + str(node_dict[u]) + ').\\n')\n",
-    "\n",
-    "    return node_dict\n",
-    "\n",
-    "tgf_dict = graph_to_tgf(G)\n",
-    "asp_dict = graph_to_asp(G)"
+    "explainer.export_graph('asp', '../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "max degree: 14\n",
-      "Generating 213 new data...\n",
-      "213 instances added\n",
-      "213 instances predicted\n",
-      "288 288\n",
-      "Generating arguments\n",
-      "3456  potential arg checked.\n",
-      "len  1 : 14 ,  12\n",
-      "19008  potential arg checked.\n",
-      "len  2 : 153 ,  92\n",
-      "63360  potential arg checked.\n",
-      "len  3 : 150 ,  144\n",
-      "142560  potential arg checked.\n",
-      "len  4 : 34 ,  37\n",
-      "228096  potential arg checked.\n",
-      "len  5 : 32 ,  8\n",
-      "266112  potential arg checked.\n",
-      "len  6 : 3 ,  0\n",
-      "228096  potential arg checked.\n",
-      "len  7 : 0 ,  0\n",
-      "Saving to  saves\\adult_75_extended_minimals.df\n",
-      "386 293  args total\n",
-      "adult_75_extended\n",
-      "len(R_atk) =  91203\n",
-      "5 highest degrees: [(frozenset({60}), 375) (frozenset({68}), 375) (frozenset({57}), 375)\n",
-      " (frozenset({53}), 385) (frozenset({52}), 385)]\n",
-      "5 lowest degrees: [(frozenset({2, 36, 6, 23}), 177) (frozenset({0, 38, 7, 50, 54}), 180)\n",
-      " (frozenset({0, 38, 7, 50, 23}), 180) (frozenset({2, 19, 6}), 181)\n",
-      " (frozenset({0, 38, 7, 41, 23}), 181)]\n",
-      "edges per node: 268.63917525773195\n",
-      "max degree: 10\n",
-      "Generating 385 new data...\n",
-      "385 instances added\n",
-      "385 instances predicted\n",
-      "673 673\n",
-      "Generating arguments\n",
-      "8076  potential arg checked.\n",
-      "len  1 : 0 ,  11\n",
-      "44418  potential arg checked.\n",
-      "len  2 : 133 ,  135\n",
-      "148060  potential arg checked.\n",
-      "len  3 : 355 ,  258\n",
-      "333135  potential arg checked.\n",
-      "len  4 : 262 ,  158\n",
-      "533016  potential arg checked.\n",
-      "len  5 : 52 ,  23\n",
-      "621852  potential arg checked.\n",
-      "len  6 : 5 ,  3\n",
-      "533016  potential arg checked.\n",
-      "len  7 : 0 ,  0\n",
-      "Saving to  saves\\adult_75_extended_minimals.df\n",
-      "807 588  args total\n",
-      "adult_75_extended\n",
-      "len(R_atk) =  383388\n",
-      "5 highest degrees: [(frozenset({10, 47}), 781) (frozenset({8}), 781)\n",
-      " (frozenset({49, 59, 69, 54}), 783) (frozenset({57}), 790)\n",
-      " (frozenset({46}), 792)]\n",
-      "5 lowest degrees: [(frozenset({0, 34, 56, 21}), 322) (frozenset({0, 33, 56}), 322)\n",
-      " (frozenset({0, 41, 34, 56}), 334) (frozenset({0, 42, 56}), 344)\n",
-      " (frozenset({0, 41, 18, 56}), 350)]\n",
-      "edges per node: 549.6602150537634\n",
-      "max degree: 15\n",
-      "Generating 792 new data...\n",
-      "792 instances added\n",
-      "792 instances predicted\n",
-      "1465 1465\n",
-      "Generating arguments\n",
-      "17580  potential arg checked.\n",
-      "len  1 : 0 ,  10\n",
-      "96690  potential arg checked.\n",
-      "len  2 : 171 ,  135\n",
-      "322300  potential arg checked.\n",
-      "len  3 : 494 ,  57\n",
-      "725175  potential arg checked.\n",
-      "len  4 : 399 ,  237\n",
-      "1160280  potential arg checked.\n",
-      "len  5 : 60 ,  134\n",
-      "1353660  potential arg checked.\n",
-      "len  6 : 23 ,  23\n",
-      "1160280  potential arg checked.\n",
-      "len  7 : 2 ,  3\n",
-      "725175  potential arg checked.\n",
-      "len  8 : 0 ,  1\n",
-      "322300  potential arg checked.\n",
-      "len  9 : 0 ,  0\n",
-      "Saving to  saves\\adult_75_extended_minimals.df\n",
-      "1149 600  args total\n",
-      "adult_75_extended\n",
-      "len(R_atk) =  559046\n",
-      "5 highest degrees: [(frozenset({62}), 1110) (frozenset({66}), 1110) (frozenset({60}), 1110)\n",
-      " (frozenset({68}), 1110) (frozenset({57}), 1116)]\n",
-      "5 lowest degrees: [(frozenset({0, 41, 34, 56}), 327) (frozenset({0, 41, 18, 56}), 327)\n",
-      " (frozenset({46, 34, 6}), 340) (frozenset({46, 31}), 342)\n",
-      " (frozenset({46, 43, 30}), 345)]\n",
-      "edges per node: 639.2750142938822\n"
+      "Working with NetworkX to find naive extensions:\n",
+      "Graph density =  0.4289357051787991\n",
+      "Number of extensions:  769\n",
+      "Time for selection:  0.05899333953857422\n",
+      "Len max_cov_exts:  2\n"
      ]
     }
    ],
    "source": [
-    "from typing import OrderedDict\n",
-    "import networkx as nx\n",
-    "from sklearn import preprocessing\n",
-    "\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "#print(explainer.categorical_names)\n",
-    "#print(explainer.categorical_features)\n",
-    "#print(explainer.ordinal_features)\n",
-    "#le.set_params(explainer.feature_names)\n",
-    "\n",
-    "def generate_instance_random(constraints):\n",
-    "    instance = OrderedDict.fromkeys(explainer.dataset.columns)\n",
-    "    for f in constraints:\n",
-    "        col=explainer.col_p_feature[f]\n",
-    "        instance[col] = explainer.feature_names[f].split('_')[1]\n",
-    "        fill_instance(instance, 'random')\n",
-    "    return list(instance.values())\n",
-    "\n",
-    "def fill_instance(instance, strategy):\n",
-    "    if strategy == 'random':\n",
-    "        # fill the instance with a random values sampled from baseline dataset\n",
-    "        for i_, col in enumerate(instance.keys()):\n",
-    "            if instance[col] is None:\n",
-    "                instance[col] = explainer.dataset[col].sample(1, random_state=1).values[0]\n",
-    "    elif strategy == 'most_frequent':\n",
-    "        # fill the instance with the most frequent value for each column\n",
-    "        for k, i_ in enumerate(instance.keys()):\n",
-    "            if instance[k] is None:\n",
-    "                instance[k] = explainer.dataset[i_].value_counts().index[0]\n",
-    "    \n",
-    "def instance2encoded(instance, dataset):\n",
-    "    encoded = []\n",
-    "    for col in dataset.categorical_features:\n",
-    "        encoded.append(dataset.categorical_names[col].index(instance[col]))\n",
-    "    return np.array(encoded)\n",
-    "\n",
-    "def extend_dataset(G, dataset_t, y):\n",
-    "    hist = nx.degree_histogram(G)\n",
-    "    print('max degree:', max(hist))\n",
-    "    max_deg_node = sorted(G.degree, key=lambda x: x[1], reverse=True)\n",
-    "    attackers = G.edges(max_deg_node[0][0])\n",
-    "\n",
-    "    # predict new data\n",
-    "    transformed_data_plus = []\n",
-    "    y_plus = []\n",
-    "    print(\"Generating \" + str(len(attackers)) +\" new data...\")\n",
-    "    for a in attackers:\n",
-    "        # print(a, [explainer.feature_names[k] for k in a[1]])\n",
-    "        inst = generate_instance_random(set.union(set(a[0]), set(a[1])))\n",
-    "        transformed_data_plus.append(inst)\n",
-    "        y_plus.append(c.predict(instance2encoded(inst, dataset).reshape(1, -1))[0])\n",
-    "    print(str(len(transformed_data_plus)) + \" instances added\")\n",
-    "    print(str(len(y_plus)) + \" instances predicted\")\n",
-    "    \n",
-    "    #train_data_plus = train_data = pd.DataFrame(transformed_data[:nb_vals] + transformed_data_plus, columns=dataset.feature_names)\n",
-    "    dataset_t += transformed_data_plus\n",
-    "    y += y_plus\n",
-    "    print(len(dataset_t), len(y))\n",
-    "    train_data_plus = pd.DataFrame(dataset_t, columns=dataset.feature_names)\n",
-    "    #print(train_data_plus.shape)\n",
-    "    #print(y_plus)\n",
-    "    explainer = ae.ArgTabularExplainer(c, train_data_plus, y + y_plus, 'adult_' + str(nb_vals) + '_extended', compute=True)\n",
-    "\n",
-    "    G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
-    "    print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
-    "    return G, dataset_t, y\n",
-    "\n",
-    "dataset_t = transformed_data[:nb_vals]\n",
-    "G, dataset_t, y = extend_dataset(G, dataset_t, y)\n",
-    "G, dataset_t, y = extend_dataset(G, dataset_t, y)\n",
-    "G, dataset_t, y = extend_dataset(G, dataset_t, y)\n"
+    "#ext_gen = explainer.extension_generator_from_graph()\n",
+    "ext_gen = explainer.extension_generator_from_sat(file='../saves/lending_100_sat.txt')\n",
+    "max_covi_ext = explainer.make_selection('max_covi', ext_gen)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1178 723  args total\n",
-      "adult_100_extended\n",
-      "len(R_atk) =  693851\n",
-      "5 highest degrees: [(frozenset({56, 68}), 1146) (frozenset({53}), 1165)\n",
-      " (frozenset({56, 59}), 1170) (frozenset({57}), 1174)\n",
-      " (frozenset({56, 52}), 1175)]\n",
-      "5 lowest degrees: [(frozenset({18, 28, 22}), 458) (frozenset({12, 31}), 464)\n",
-      " (frozenset({19, 36, 6, 55}), 464) (frozenset({19, 36, 22}), 466)\n",
-      " (frozenset({18, 28, 7}), 467)]\n"
+      "{frozenset({33}), frozenset({23}), frozenset({32, 43}), frozenset({34}), frozenset({27}), frozenset({32, 3}), frozenset({32, 6}), frozenset({24}), frozenset({26}), frozenset({32, 14}), frozenset({28}), frozenset({29}), frozenset({30}), frozenset({32, 18}), frozenset({32, 1}), frozenset({32, 52})}\n",
+      "id: 0 coverage: 2 Arg 1/2: frozenset({'Education_Some-college', 'Occupation_Sales'})\n",
+      "id: 1 coverage: 0 Arg 1/0: None\n",
+      "id: 2 coverage: 0 Arg 1/0: None\n",
+      "id: 3 coverage: 2 Arg 1/1: frozenset({'Occupation_Machine-op-inspct'})\n",
+      "id: 4 coverage: 0 Arg 1/0: None\n",
+      "id: 5 coverage: 2 Arg 1/1: frozenset({'Occupation_Farming-fishing'})\n",
+      "id: 6 coverage: 0 Arg 1/0: None\n",
+      "id: 7 coverage: 2 Arg 1/3: frozenset({'Occupation_Sales', 'Sex_Female'})\n",
+      "id: 8 coverage: 0 Arg 1/0: None\n",
+      "id: 9 coverage: 3 Arg 1/1: frozenset({'Occupation_Prof-specialty'})\n",
+      "id: 10 coverage: 0 Arg 1/0: None\n",
+      "id: 11 coverage: 1 Arg 1/1: frozenset({'Occupation_Transport-moving'})\n",
+      "id: 12 coverage: 0 Arg 1/0: None\n",
+      "id: 13 coverage: 1 Arg 1/1: frozenset({'Occupation_Craft-repair'})\n",
+      "id: 14 coverage: 3 Arg 1/1: frozenset({'Occupation_Prof-specialty'})\n",
+      "id: 15 coverage: 2 Arg 1/2: frozenset({'Education_Bachelors', 'Occupation_Sales'})\n",
+      "id: 16 coverage: 2 Arg 1/1: frozenset({'Occupation_Farming-fishing'})\n",
+      "id: 17 coverage: 1 Arg 1/1: frozenset({'Occupation_Handlers-cleaners'})\n",
+      "id: 18 coverage: 2 Arg 1/2: frozenset({'Hours per week_Hours per week > 45.00', 'Occupation_Sales'})\n",
+      "id: 19 coverage: 1 Arg 1/1: frozenset({'Occupation_Other-service'})\n",
+      "id: 20 coverage: 0 Arg 1/0: None\n",
+      "id: 21 coverage: 3 Arg 1/1: frozenset({'Occupation_Prof-specialty'})\n",
+      "id: 22 coverage: 1 Arg 1/1: frozenset({'Occupation_Tech-support'})\n",
+      "id: 23 coverage: 1 Arg 1/1: frozenset({'Occupation_Adm-clerical'})\n",
+      "id: 24 coverage: 2 Arg 1/1: frozenset({'Occupation_Machine-op-inspct'})\n",
+      "8 25\n"
      ]
     }
    ],
    "source": [
-    "G = explainer.build_attack_graph(compute=True, display_graph=False)"
+    "#sel = explainer.make_selection(max_covi_ext, 'max_covc')\n",
+    "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
+    "#print(res)\n",
+    "\n",
+    "explainer.display_explanations()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sat solver: ASPARTIX"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext_gen = explainer.extension_generator(file='asp_test.txt')\n",
+    "max_covi_ext = explainer.make_selection(ext_gen, 'max_covi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
