--- a/experiments/exp_bank_loan.ipynb
+++ b/experiments/exp_bank_loan.ipynb
@@ -264,7 +264,9 @@
      "text": [
       "Pre-processing file...\n",
       "Done\n",
-      "Reading ../saves/bankloan_100_sat_preprocessed.txt\n"
+      "Reading ../saves/bankloan_100_sat_preprocessed.txt\n",
+      "Time for selection:  257.57285618782043\n",
+      "Len max_cov_exts:  8\n"
      ]
     }
    ],
